src/pages/styles/Installation.module.css
.container {
    width: 100%;
    padding: 36px 15px 20px 15px;

    position: relative;

    display: flex;
    flex-direction: column;
    gap: 20px;
}

.container h2 {
    margin: 0;
    white-space: pre-wrap;
}

.headDecor {
    position: absolute;
    top: 39px;
    right: 15px;

    display: flex;
    gap: 15px;
}

.headDecor div {
    width: 16px;
    height: 14px;
    border-radius: 2px;
    background: #141D28;
}



.itemSwitchWrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    border-radius: 2px;
    border: 2px solid #000;
}

.itemSwitch {
    position: relative;
    width: 100%;
    height: 40px;
    background: #F0F0F0;
}

.itemSwitch svg {
    position: absolute;
    top: 14px;
    right: 14px;
}

.itemSwitchButton {
    margin-left: 15px;
    text-align: left;
    font-size: 16px;
    text-transform: uppercase;
}

.dropDown {
    width: 100%;
    padding: 15px;
    border-top: 2px solid #000;

    display: flex;
    flex-direction: column;
    gap: 12px;
}

.dropDownItem {
    background: transparent;
    padding: 0 0 5px 0;
    border-bottom: 2px solid #D9D9D9;

    font-size: 14px;
    line-height: 16px;
    text-align: left;
}



.video {
    border-radius: 2px;
    border: 2px solid #000;
}



.imgContainer {
    width: 100%;
    height: 45.8vw;
    border-radius: 2px;
    border: 2px solid #000;
}

.imgContainer img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: bottom;
}



.guide {
    border-radius: 2px;
    border: 2px solid #000;

    position: relative;
}

.guide h2 {
    margin: 36px 0 36px 42px;
    position: relative;
    z-index: 1;
}

.guideDecorLeft {
    width: 177px;
    height: 72px;
    background: #D9D9D9;

    position: absolute;
    top: 20px;
    left: -17px;
}

.guideDecorRight {
    width: calc(100% - 225px);
    height: 6px;
    background: #D9D9D9;

    position: absolute;
    top: 53px;
    right: -17px;
}

.guideTextBlock {
    display: flex;
    flex-direction: column;
    gap: 12px;

    padding: 0 42px 22px 42px;
}

.guideTextBlock p {
    position: relative;

    font-size: 14px;
    font-weight: 400;
    line-height: 124%;
}

.guideTextBlock p::before {
    content: '';
    display: block;
    width: 10px;
    height: 10px;
    border-radius: 2px;
    background: #D9D9D9;
    position: absolute;
    top: 4px;
    left: -16px;
}



@media (min-width: 1025px) {

    .container {
        padding: 48px 80px 80px 80px;

        display: grid;
        grid-template-columns: 320px 1fr;
        grid-template-rows: 77px 360px 160px 1fr;
        grid-column-gap: 40px;
    }

    .container h2 {
        white-space: normal;

        grid-column: 1/3;
        grid-row: 1/2;
    }

    .headDecor {
        top: 49px;
        right: 80px;

        gap: 48px;
    }

    .headDecor div {
        width: 32px;
        height: 28px;
        border-radius: 5px;
        background: #141D28;
    }


    .itemSwitchWrapper {
        width: 320px;
    }


    .video {
        background: #D9D9D9;
        width: 100%;
        height: 100%;

        grid-column: 2/3;
        grid-row: 2/4;
    }


    .imgContainer {
        width: 320px;
        height: 160px;

        grid-column: 1/2;
        grid-row: 3/4;
    }


    .guide {
        margin-top: 80px;

        grid-column: 1/3;
        grid-row: 4/5;
    }

    .guide h2 {
        margin: 45px 0 45px 28px;
    }

    .guideDecorLeft {
        width: 365px;
        height: 118px;

        top: 33px;
        left: -82px;
    }

    .guideDecorRight {
        width: calc(100% - 485px);

        top: 89px;
        right: -82px;
    }


    .guideTextBlock {
        padding: 0 40px 40px 40px;
    }

    .guideTextBlock p {
        font-size: 20px;
        line-height: 22px;
        text-indent: 43px;
    }

    .guideTextBlock p::before {
        width: 18px;
        height: 18px;
        border-radius: 5px;
        top: 0px;
        left: 0px;
    }

}

